@@ -181,7 +181,9 @@
 #gptofoo escp2-10000 printer/Epson-Stylus_Pro_10000
 #gptofoo escp2-scan2000 printer/Epson-Stylus_Scan_2000
 #gptofoo escp2-scan2500 printer/Epson-Stylus_Scan_2500
+#gptofoo escp2-cx3100 printer/Epson-Stylus_CX3100
 #gptofoo escp2-cx3200 printer/Epson-Stylus_CX3200
+#gptofoo escp2-cx5100 printer/Epson-Stylus_CX5100
 #gptofoo escp2-cx5200 printer/Epson-Stylus_CX5200
 #gptofoo escp2-cl700 printer/Epson-CL_700
 #gptofoo escp2-cl750 printer/Epson-CL_750
