@@ -4,7 +4,7 @@
    XML description of printers known to libgimpprint
    This file was originally generated.  It should be edited by hand.
 
-   "$Id: printers.xml,v 1.73 2003/06/15 03:23:20 rlk Exp $"
+   "$Id: printers.xml,v 1.74 2003/07/07 00:49:41 rlk Exp $"
 -->
 
 <gimp-print xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
@@ -714,10 +714,25 @@
         <gamma value="0.585"/>
         <density value="1.0"/>
       </printer>
+      <printer name="EPSON Stylus CX-3100" driver="escp2-cx3100">
+        <color value="true"/>
+        <model value="52"/>
+        <gamma value="0.585"/>
+        <density value="1.0"/>
+      </printer>
       <printer name="EPSON Stylus CX-3200" driver="escp2-cx3200">
         <color value="true"/>
         <model value="52"/>
         <gamma value="0.585"/>
+        <density value="1.0"/>
+      </printer>
+      <printer name="EPSON Stylus CX-5100" driver="escp2-cx5100">
+        <color value="true"/>
+        <model value="55"/>
+        <cyan value="0.96"/>
+        <magenta value="1.02"/>
+        <yellow value="1.02"/>
+        <gamma value="0.688"/>
         <density value="1.0"/>
       </printer>
       <printer name="EPSON Stylus CX-5200" driver="escp2-cx5200">
